route-and-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: springboot-items-api-webflux
    name: springboot-items-api-webflux
spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: 9001-tcp
      port: 9001
      protocol: TCP
      targetPort: 9001
    selector:
      app: springboot-items-api-webflux
      deploymentconfig: springboot-items-api-webflux
status:
    loadBalancer: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: springboot-items-api-webflux
  name: springboot-items-api-webflux
spec:
  port:
    targetPort: 80-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: springboot-items-api-webflux
    weight: 100
  wildcardPolicy: None
